Fixes alignment of images in gallery. re #6979

--- a/arches/app/media/css/arches.css
+++ b/arches/app/media/css/arches.css
@@ -12800,7 +12800,7 @@ a.jstree-anchor.permissions-widget {
     padding-left: 0px;
     display: inline-block;
     white-space: nowrap;
-    vertical-align: inherit;
+    vertical-align: top;
 }
 
 .iiif-viewer-gallery.gallery-expanded .iiif-gallery-canvas,
